--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(218, 187, 193);
+    background-color: pink;
 }
 
 
@@ -28,29 +28,33 @@ img{
 
   p{
     font-weight: bold;
-    color:  grey;
+    color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 13.5px;
 }
   h4{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-weight: bold;
-  color: grey;
+  color: black;
   }
 
   button{
-    background-color:rgb(206, 169, 176);
+    
     border-radius: 8px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:white ;
-    border-color:rgb(206, 169, 176);
+    border-color:rgb(255, 158, 177);
     padding: 10px;
+    transition: all .2s ease-in-out;
+    background-color:rgb(255, 158, 177);
     
   }
 
   button:hover{
-    background-color:rgb(187, 180, 181); 
-    border-color: rgb(187, 180, 181);
+    background-color:pink; 
+    border-color:pink;
+    transform: scale(1.5);
+    color:white;
     
 }
 
@@ -58,11 +62,11 @@ img{
     text-decoration: line-through;
     display: inline;
     font-size: 13px;
-    color: grey;
+    color: black;
 }
 
 .bigprice{
-    color: rgb(206, 169, 176);
+    color:rgb(209, 132, 144); 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
      font-size: 24px;
      display: inline;
