--- a/styles.css
+++ b/styles.css
@@ -7,69 +7,23 @@ img{
     border-radius: 8px;
     width: 250px;
   height: 280px;
-  display: block;
-    margin-left: auto;
-    margin-right: auto;
+
+  float: left;
   
 }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 250px;
-    margin: auto;
-   text-align: center;
-    font-family: arial;
-    background-color: white;
-    border-radius: 8px;
-   
-    
-    
-  }
-
-  p{
-    font-weight: bold;
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 13.5px;
+.desc{
+  text-align:start ;
+  align-content: space-around;
+  padding: 15px;
+  
+ 
 }
-  h4{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  color: black;
-  }
-
-  button{
-    
-    border-radius: 8px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:white ;
-    border-color:rgb(255, 158, 177);
-    padding: 10px;
-    transition: all .2s ease-in-out;
-    background-color:rgb(255, 158, 177);
-    
-  }
-
-  button:hover{
-    background-color:pink; 
-    border-color:pink;
-    transform: scale(1.5);
-    color:white;
-    
-}
-
-.crossed{
-    text-decoration: line-through;
-    display: inline;
-    font-size: 13px;
-    color: black;
-}
-
-.bigprice{
-    color:rgb(209, 132, 144); 
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-     font-size: 24px;
-     display: inline;
-}
+ .allphotos{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-content:space-around;
+  grid-gap: 50px;
+ }
 
 
